# jax-agents

./: .gitignore  404.html  LICENSE  LICENSE.txt  README.md  README_PYPI.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  wsl_requirements.txt
agent_utils/: dqn_datastructures.py  postprocessing.py  q_agent_eval.py  scrap.py
agents/: dqn.py
agents_utils/: dqn_utils.py  postprocessing.py
benchmark/cartpole v1/: cartpole_dqn.py  cartpole_sqn_hyperpar_tuning.py
benchmarks/acrobot v1/: acrobot_v1_ppo.py
benchmarks/cartpole v1/: cartpole_dqn.py  cartpole_nn_gallery.py  cartpole_v1_dqn.py  cartpole_v1_pgreinforce.py  cartpole_v1_ppo.py  cartpole_v1_ppo_restore_agent.py  cartpole_v1_ppo_vmap.py  cartpole_v1_vanillapg.py  cartpole_v1_vpg.py
benchmarks/cartpole v1/CUsersRepositoriesjax-agentsbenchmarkscartpole v1checkpointsppo/: hyperparameters.txt  training_configuration.txt
benchmarks/cartpole v1/log/: data.json
benchmarks/marl/cleaner/: agent_gallery.py  cleaner_env.py  cleaner_ippo.py
benchmarks/marl/hunting/: agents.py  hunting_continuous_ippo.py  hunting_continuous_ippo_NEW.py  hunting_discrete_ippo.py  (+5 more)
docs/: index.md
docs/reference/: ippo.md  ippobase.md  ppoagent.md  ppoagentbase.md
jax_agents/agents/: dqn.py
jaxagents/: dqn.py  ippo.py  ippo_NEW.py  ippo_OLD.py  ppo.py  vanillapg.py  vpg.py  vpg_discrete.py
jaxagents/agent_utils/: dqn_datastructures.py  dqn_utils.py  ippo_utils.py  ppo_utils.py  vanillapg_utils.py  vpg_utils.py
jaxagents/agents/: dqn.py
jaxagents/depreceated/: dqn.py
jaxagents/utils/: ippo_utils.py  ppo_utils.py  truncation_utils.py
reference/: index.html
reference/SUMMARY/: index.html
reference/ippo/: index.html
reference/ippobase/: index.html
reference/ppoagent/: index.html
reference/ppoagentbase/: index.html
requirements/: requirements.txt
scripts/: gen_reference_nav.py
search/: search_index.json
venv_wsl/: pyvenv.cfg
(+49 files in other folders)
