[tool.poetry]
name = "jaxagents"
version = "0.2.5"
description = "JAX implementation of Reinforcement Learning agents"
authors = ["Antonis Mavritsakis <amavrits@gmail.com>"]
license = "Apache-2.0"
readme = "README_PYPI.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jax = "^0.5.1"  # Just the core package

chex = "^0.1.86"
distrax = "^0.1.5"
flax = "^0.10.6"
flashbax = "^0.1.2"
jaxtyping = "^0.2.29"
gymnax = "^0.0.8"
jax-tqdm = "^0.2.1"
optax = "^0.2.2"
orbax = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
